objects/Provision__c.object
<CustomObject><fields>
        <fullName>AD_Account_Created_Updated__c</fullName>
        <label>AD Account Created/Updated</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>AccountDisabled__c</fullName>
        <label>AccountDisabled</label>
        <picklist>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CN__c</fullName>
        <formula>substitute(Student_Staff__r.FirstName ," ", "") &amp; "." &amp;  Student_Staff__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <formula>Student_Programme__r.Programme__r.Master_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields><fields>
        <fullName>DestinationOU__c</fullName>
        <formula>"OU=" &amp;   Student_Programme__r.Programme_Type__c  &amp; ",OU=Students,DC=lstmed,DC=ac,DC=uk"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DestinationOU</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Displayname__c</fullName>
        <formula>Student_Staff__r.FirstName  &amp;  " " &amp;  Student_Staff__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Expiry_Date__c</fullName>
        <inlineHelpText>Set by Workflow on creation. Can be manually amended.</inlineHelpText>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>GivenName__c</fullName>
        <formula>substitute(Student_Staff__r.FirstName," ", "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GivenName</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HomeDirectory__c</fullName>
        <formula>"\\\\\\\\filestore01\\\\Student\\\\Users\\\\"&amp;LEFT( Student_Staff__r.LSTM_Email__c,LEN(Student_Staff__r.LSTM_Email__c )-13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeDirectory</label>
        <type>Text</type>
    </fields><fields>
        <fullName>HomeDrive__c</fullName>
        <formula>"P"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeDrive</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ITS_Action__c</fullName>
        <label>ITS Action</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Reactivated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mail__c</fullName>
        <formula>Student_Staff__r.LSTM_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mail</label>
        <type>Text</type>
    </fields><fields>
        <fullName>MemberOf__c</fullName>
        <formula>IF(Student_Programme__r.Programme__r.Code__c="DTN", 
"CN=Students,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=On Campus,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=Brightspace Access,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=LSTMSSPR,OU=Groups,DC=lstmed,DC=ac,DC=uk", 
IF(Student_Programme__r.Programme_Type__c="Online Course", 
"CN=Students,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=Off Campus,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=Brightspace Access,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=LSTMSSPR,OU=Groups,DC=lstmed,DC=ac,DC=uk", 
"CN=Students,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=Brightspace Access,OU=Groups,DC=lstmed,DC=ac,DC=uk;CN=LSTMSSPR,OU=Groups,DC=lstmed,DC=ac,DC=uk"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MemberOf</label>
        <type>Text</type>
    </fields><fields>
        <fullName>MustChangePassword__c</fullName>
        <formula>"FALSE"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MustChangePassword</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>8</length>
        <type>Text</type>
    </fields><fields>
        <fullName>PostOfficeBox__c</fullName>
        <formula>"Student"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostOfficeBox</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ProfilePath__c</fullName>
        <formula>"%logonserver%\\\\NETLOGON\\\\Profiles\\\\student"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfilePath</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Code__c</fullName>
        <formula>Student_Programme__r.Programme_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <formula>Student_Programme__r.Programme_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>ProxyAddress__c</fullName>
        <description>AD Proxy Address</description>
        <formula>"SMTP:" &amp; Student_Programme__r.LSTM_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to derive the AD Proxy Address from the LSTM Email field on the Student Programme</inlineHelpText>
        <label>ProxyAddress</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SAMAccountName__c</fullName>
        <formula>value(  Student_Staff__r.LSTM_No__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAMAccountName</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SN__c</fullName>
        <formula>Student_Staff__r.sn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SN</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Programme</label>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>Provisions</relationshipLabel>
        <relationshipName>Student_Programme</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Student_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student/Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Provisions</relationshipLabel>
        <relationshipName>Provisions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>UserPrincipalName__c</fullName>
        <formula>Student_Staff__r.LSTM_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserPrincipalName</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Provision</label><nameField>
        <label>Provision Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Provisions</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All_DTM_H_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Code__c</field>
            <operation>contains</operation>
            <value>DTM&amp;H</value>
        </filters>
        <label>All DTM&amp;H Provisions</label>
    </listViews><listViews>
        <fullName>All_DTN_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Code__c</field>
            <operation>contains</operation>
            <value>DTN</value>
        </filters>
        <label>All DTN Provisions</label>
    </listViews><listViews>
        <fullName>All_Diploma_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>contains</operation>
            <value>Professional Diploma</value>
        </filters>
        <label>All Diploma Provisions</label>
    </listViews><listViews>
        <fullName>All_MSc_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>contains</operation>
            <value>MSc Programme</value>
        </filters>
        <label>All MSc Provisions</label>
    </listViews><listViews>
        <fullName>All_PGR_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>PGR</value>
        </filters>
        <label>All PGR Provisions</label>
    </listViews><listViews>
        <fullName>Expired_Overdue_Deactivation</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiry_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Expired: Overdue Deactivation</label>
    </listViews><listViews>
        <fullName>Expiring_this_Month</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiry_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Expiring this Month</label>
    </listViews><listViews>
        <fullName>Expiring_this_Week</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Expiry_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Expiring this Week</label>
    </listViews><listViews>
        <fullName>Other_Diploma_Provisions</fullName>
        <columns>NAME</columns>
        <columns>Displayname__c</columns>
        <columns>Student_Staff__c</columns>
        <columns>Department__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Programme_Code__c</columns>
        <columns>Programme_Type__c</columns>
        <columns>Student_Programme__c</columns>
        <columns>AccountDisabled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Programme_Code__c</field>
            <operation>notContain</operation>
            <value>DTN,DTM&amp;H</value>
        </filters>
        <filters>
            <field>Programme_Type__c</field>
            <operation>equals</operation>
            <value>Professional Diploma</value>
        </filters>
        <label>Other Diploma Provisions</label>
    </listViews></CustomObject>